--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./scss/style.scss" />
+    <script src="ts/main.ts" defer type="module"></script>
   </head>
   <body></body>
 </html>
