Added html for hero

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,12 @@
     <link rel="stylesheet" href="./scss/style.scss" />
     <script src="ts/main.ts" defer type="module"></script>
   </head>
-  <body></body>
+  <body>
+    <main class="hero">
+        <div class="hero__container">
+            <h2 class="hero__title">Test</h2>
+            <button class="hero__button">Shop now</button>
+        </div>
+    </main>
+  </body>
 </html>
