--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link rel="stylesheet" href="./scss/style.scss" />
+
     <script src="ts/main.ts" defer type="module"></script>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__nav">
+        <div class="header__burger" id="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="header__list" id="nav">
+          <li class="header__navitem"><a href=""></a>Shop</li>
+          <li class="header__navitem"><a href=""></a>Kontakt</li>
+          <li class="header__navitem"><a href=""></a>FAQ</li>
+        </ul>
+
+        <div class="header__logo">
+          <img src="./assets/logo-no-background.svg" alt="logo" />
+        </div>
+        <div class="header__shopcart">
+          <i id="cart" class="fa fa-shopping-cart" style="font-size: 36px"></i>
+          <div id="shop" class="header__shop"></div>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
