--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./scss/style.scss" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manrope">
     <script src="ts/main.ts" defer type="module"></script>
   </head>
   <body>
     <main class="hero">
         <div class="hero__container">
-            <h2 class="hero__title">Test</h2>
-            <button class="hero__button">Shop now</button>
+            <p class="hero__text">Här hittar du hela vårt hudvårdssortiment. Torr, känslig eller oljig hy? Vi har produkter för alla hudtyper.</p>
+            <button class="hero__button">Köp nu</button>
         </div>
     </main>
   </body>
