--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <body>
     <main class="hero">
         <div class="hero__container">
-            <p class="hero__text">Här hittar du hela vårt hudvårdssortiment. Torr, känslig eller oljig hy? Vi har produkter för alla hudtyper.</p>
+            <p class="hero__text">Torr, känslig eller oljig hy? Vi har produkter för alla hudtyper.</p>
             <button class="hero__button">Köp nu</button>
         </div>
     </main>
