--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,16 @@
           <img src="./assets/logo-no-background.svg" alt="logo" />
         </div>
         <div class="header__shopcart">
-          <i id="cart" class="fa fa-shopping-cart" style="font-size: 36px"></i>
-          <div id="shop" class="header__shop"></div>
+          <i id="cart" class="fa fa-shopping-cart" style="font-size: 30px"></i>
+        </div>
+
+        <div id="shop" class="header__shop">
+          <div class="header__shopheading">
+            <h4>Varukorg</h4>
+            <button id="closebutton">
+              <i class="fa fa-close" style="font-size: 28px"></i>
+            </button>
+          </div>
         </div>
       </nav>
     </header>
