--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,6 +14,10 @@
     <link rel="stylesheet" href="./scss/style.scss" />
 
     <script src="ts/main.ts" defer type="module"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=DM Sans"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
