Added main again

--- a/src/index.html
+++ b/src/index.html
@@ -50,5 +50,11 @@
         </div>
       </nav>
     </header>
+    <main class="hero">
+      <div class="hero__container">
+          <p class="hero__text">Torr, känslig eller oljig hy? Vi har produkter för alla hudtyper.</p>
+          <button class="hero__button">Köp nu</button>
+      </div>
+  </main>
   </body>
 </html>
