--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="./scss/style.scss" />
 
-    <script src="ts/main.ts" defer type="module"></script>
+    <script src="ts/header.ts" defer type="module"></script>
     <link
       href="https://fonts.googleapis.com/css?family=DM Sans"
       rel="stylesheet"
@@ -52,9 +52,11 @@
     </header>
     <main class="hero">
       <div class="hero__container">
-          <p class="hero__text">Torr, känslig eller oljig hy? Vi har produkter för alla hudtyper.</p>
-          <button class="hero__button">Köp nu</button>
+        <p class="hero__text">
+          Torr, känslig eller oljig hy? Vi har produkter för alla hudtyper.
+        </p>
+        <button class="hero__button">Köp nu</button>
       </div>
-  </main>
+    </main>
   </body>
 </html>
