--- a/src/shop.html
+++ b/src/shop.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <nav class="header__nav">
         <div class="header__burger" id="burger">
