--- a/src/shop.html
+++ b/src/shop.html
@@ -28,13 +28,13 @@
           <div class="line3"></div>
         </div>
         <ul class="header__list" id="nav">
-          <li class="header__navitem"><a href=""></a>Shop</li>
-          <li class="header__navitem"><a href=""></a>Kontakt</li>
-          <li class="header__navitem"><a href=""></a>FAQ</li>
+          <li class="header__navitem"><a href="">Shop</a></li>
+          <li class="header__navitem"><a href="">Kontakt</a></li>
+          <li class="header__navitem"><a href="">FAQ</a></li>
         </ul>
 
         <div class="header__logo">
-          <img src="./assets/logo-no-background.svg" alt="logo" />
+          <a href="./index.html"><img url="./assets/logo-no-background.svg" alt="logo" /></a>
         </div>
         <div class="header__shopcart">
           <i id="cart" class="fa fa-shopping-cart" style="font-size: 30px"></i>
