--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
           <div class="line3"></div>
         </div>
         <ul class="header__list" id="nav">
-          <li class="header__navitem"><a href=""></a>Shop</li>
-          <li class="header__navitem"><a href=""></a>Kontakt</li>
-          <li class="header__navitem"><a href=""></a>FAQ</li>
+          <li class="header__navitem"><a href="./shop.html">Shop</a></li>
+          <li class="header__navitem"><a href="">Kontakt</a></li>
+          <li class="header__navitem"><a href="">FAQ</a></li>
         </ul>
 
         <div class="header__logo">
