added hrefs to categories

--- a/src/shop.html
+++ b/src/shop.html
@@ -34,7 +34,7 @@
         </ul>
 
         <div class="header__logo">
-          <a href="./index.html"><img url="./assets/logo-no-background.svg" alt="logo" /></a>
+          <a href="./index.html"><img src="./assets/logo-no-background.svg" alt="logo" /></a>
         </div>
         <div class="header__shopcart">
           <i id="cart" class="fa fa-shopping-cart" style="font-size: 30px"></i>
