functioning product modal and product links

--- a/src/shop.html
+++ b/src/shop.html
@@ -50,6 +50,9 @@
         </div>
       </nav>
     </header>
+    <dialog id="modal" class="modal">
+          
+    </dialog>
     <main class="main">
         <div class="main__menu" id="menu">
 
