--- a/src/shop.html
+++ b/src/shop.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css?family=DM Sans"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/131d4698ad.js" crossorigin="anonymous"></script>
   </head>
   <body class="body">
     <header class="header">
