--- a/src/shop.html
+++ b/src/shop.html
@@ -20,7 +20,7 @@
     />
     <script src="https://kit.fontawesome.com/131d4698ad.js" crossorigin="anonymous"></script>
   </head>
-  <body class="body">
+  <body>
     <header class="header">
       <nav class="header__nav">
         <div class="header__burger" id="burger">
