Added styling to cart counter

--- a/src/shop.html
+++ b/src/shop.html
@@ -21,7 +21,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <nav class="header__nav">
+      <nav class="header__nav" id="header__nav">
         <div class="header__burger" id="burger">
           <div class="line1"></div>
           <div class="line2"></div>
@@ -36,7 +36,7 @@
         <div class="header__logo">
           <a href="./index.html"><img src="./assets/logo-no-background.svg" alt="logo" /></a>
         </div>
-        <div class="header__shopcart">
+        <div class="header__shopcart" id="header__shopcart">
           <i id="cart" class="fa fa-shopping-cart" style="font-size: 30px"></i>
         </div>
 
