--- a/src/checkout.html
+++ b/src/checkout.html
@@ -29,7 +29,7 @@
           <div class="line3"></div>
         </div>
         <ul class="header__list" id="nav">
-          <li class="header__navitem"><a href="">Shop</a></li>
+          <li class="header__navitem"><a href="./shop.html">Shop</a></li>
           <li class="header__navitem"><a href="">Kontakt</a></li>
           <li class="header__navitem"><a href="">FAQ</a></li>
         </ul>
