Added html + styling footer

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <link
@@ -56,4 +56,4 @@
         <div class="checkout__cartcontainer"></div>
     </main>
     </body>
-    </html>
+    </html> -->
