--- a/src/index.html
+++ b/src/index.html
@@ -61,5 +61,6 @@
         <button class="hero__button">Köp nu</button>
       </div>
     </main>
+    <footer class="footer"></footer>
   </body>
 </html>
