added func for hiding and showing faq answer

--- a/src/faq.html
+++ b/src/faq.html
@@ -54,7 +54,7 @@
         </div>
       </nav>
     </header>
-    <main class="faq">
+    <main class="faq" id="faq">
     </main>
   </body>
 </html>
