--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
             <a href="./shop.html">Shop</a>
           </li>
           <li class="header__navitem"><a href="">Kontakt</a></li>
-          <li class="header__navitem"><a href="">FAQ</a></li>
+          <li class="header__navitem"><a href="./faq.html">FAQ</a></li>
         </ul>
 
         <div class="header__logo">
