Added cart function and styling

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -53,7 +53,7 @@
     </header>
     <main class="checkout">
         <div class="checkout__formcontainer"></div>
-        <div class="checkout__cartcontainer"></div>
+        <div class="checkout__cartcontainer" id="checkout__cartcontainer"></div>
     </main>
     </body>
     </html>
