--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,21 @@
         <button class="hero__button">Köp nu</button>
       </div>
     </main>
-    <footer class="footer"></footer>
+    <footer>
+      <div class="logo"></div>
+      <ul class="container">
+        <li class="container__contact">Gustavslundsvägen 151D</li>
+        <li class="container__contact">167 51, Bromma</li>
+     </ul>
+     <ul class="container">
+        <li class="container__contact">info@hudshoppen.se</li>
+        <li class="container__contact">08–442 95 00</li>
+     </ul>
+     <ul class="social">
+        <li class="social__icon"><i class="fa-brands fa-instagram"></i></li>
+        <li class="social__icon"><i class="fa-brands fa-twitter"></i></li>
+        <li class="social__icon"><i class="fa-brands fa-facebook"></i></li>
+     </ul>
+    </footer>
   </body>
 </html>
