Added contactpage and form for checkout

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="checkoutbody">
     <header class="header">
       <nav class="header__nav" id="header__nav">
         <div class="header__burger" id="burger">
@@ -89,12 +89,12 @@
             />
           </div>
           <input
-            type="text"
+            type="tel"
             class="checkout__form__phone"
             placeholder="Telefon"
           />
           <input
-            type="text"
+            type="e-mail"
             class="checkout__form__email"
             placeholder="E-postadress"
           />
