--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
       href="https://fonts.googleapis.com/css?family=DM Sans"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/131d4698ad.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/131d4698ad.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -32,7 +35,7 @@
           <li class="header__navitem">
             <a href="./shop.html">Shop</a>
           </li>
-          <li class="header__navitem"><a href="">Kontakt</a></li>
+          <li class="header__navitem"><a href="./contact.html">Kontakt</a></li>
           <li class="header__navitem"><a href="">FAQ</a></li>
         </ul>
 
