--- a/src/checkout.html
+++ b/src/checkout.html
@@ -53,7 +53,9 @@
     </header>
     <main class="checkout">
         <div class="checkout__formcontainer"></div>
-        <div class="checkout__cartcontainer" id="checkout__cartcontainer"></div>
+        <div class="checkout__cartcontainer" id="checkout__cartcontainer">
+          <h3>Varukorg</h3>
+        </div>
     </main>
     </body>
     </html>
