Added cart function

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -53,8 +53,8 @@
     </header>
     <main class="checkout">
         <div class="checkout__formcontainer"></div>
-        <div class="checkout__cartcontainer" id="checkout__cartcontainer">
-          <h3>Varukorg</h3>
+        <div class="cartcontainer" id="checkout__cartcontainer">
+          <h4 id="showcart">Visa varukorg <i class='fa fa-chevron-down'></i></h4>
         </div>
     </main>
     </body>
