--- a/src/checkout.html
+++ b/src/checkout.html
@@ -103,7 +103,9 @@
           </button>
         </form>
       </div>
-      <div class="checkout__cartcontainer"></div>
+      <div class="checkout__cartcontainer">
+        <h4 id="showcart">Visa varukorgen <i class="fa-chevron-down"></i></h4>
+      </div>
     </main>
   </body>
 </html>
