--- a/src/checkout.html
+++ b/src/checkout.html
@@ -57,7 +57,7 @@
       </nav>
     </header>
     <main class="checkout">
-      <div class="checkout__formcontainer">
+      <div class="checkout__formcontainer" id="formcontainer">
         <form class="checkout__formcontainer__form" id="checkoutform">
           <div class="checkout__form__namecontainer">
             <input
@@ -93,7 +93,7 @@
             class="checkout__form__phone"
             placeholder="Telefon"
           />
-         <input
+          <input
             type="e-mail"
             class="checkout__form__email"
             placeholder="E-postadress"
@@ -104,9 +104,10 @@
         </form>
       </div>
       <div class="cartcontainer" id="checkout__cartcontainer">
-        <h4 id="showcart">Visa varukorgen <i class="fa-chevron-down"></i></h4>
+        <h4 id="showcart">
+          Visa varukorgen <i class="fa fa-chevron-down"></i>
+        </h4>
       </div>
-        
     </main>
   </body>
 </html>
