--- a/src/faq.html
+++ b/src/faq.html
@@ -33,8 +33,8 @@
           <li class="header__navitem">
             <a href="./shop.html">Shop</a>
           </li>
-          <li class="header__navitem"><a href="">Kontakt</a></li>
-          <li class="header__navitem"><a href="">FAQ</a></li>
+          <li class="header__navitem"><a href="./contact.html">Kontakt</a></li>
+          <li class="header__navitem"><a href="./faq.html">FAQ</a></li>
         </ul>
 
         <div class="header__logo">
