Added html + styling collageimages

--- a/src/index.html
+++ b/src/index.html
@@ -61,21 +61,41 @@
         <button class="hero__button">Köp nu</button>
       </div>
     </main>
+
+    <section class="collage">
+      <h4 class="collage__title">Följ oss <br> @instagram</h4>
+        <div class="collage__imagecontainer">
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+        <div class="collage__imagecontainer__image"></div>
+      </div>
+    </section>
     <footer>
       <div class="logo"></div>
-      <ul class="container">
-        <li class="container__contact">Gustavslundsvägen 151D</li>
-        <li class="container__contact">167 51, Bromma</li>
+      <div class="contacts">
+      <ul class="contacts__list">
+        <li class="contacts__list__item">Gustavslundsvägen 151D</li>
+        <li class="contacts__list__item">167 51, Bromma</li>
      </ul>
-     <ul class="container">
-        <li class="container__contact">info@hudshoppen.se</li>
-        <li class="container__contact">08–442 95 00</li>
+     <ul class="contacts__list">
+        <li class="contacts__list__item">info@hudshoppen.se</li>
+        <li class="contacts__list__item">08–442 95 00</li>
      </ul>
      <ul class="social">
         <li class="social__icon"><i class="fa-brands fa-instagram"></i></li>
         <li class="social__icon"><i class="fa-brands fa-twitter"></i></li>
         <li class="social__icon"><i class="fa-brands fa-facebook"></i></li>
      </ul>
+    </div>
     </footer>
   </body>
 </html>
