--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         </div>
       </nav>
     </header>
-    <main class="hero">
+    <main class="hero" id="hero">
       <div class="hero__container">
         <p class="hero__text">
           Torr, känslig eller oljig hy? Vi har produkter för alla hudtyper.
