--- a/src/checkout.html
+++ b/src/checkout.html
@@ -168,7 +168,7 @@
          
         </form>
       </div>
-      <div class="cartcontainer" id="checkout__cartcontainer">
+      <div class="cartcontainer" id="cart">
         <h4 id="showcart">
           Visa varukorgen <i class="fa fa-chevron-down"></i>
         </h4>
