--- a/src/faq.html
+++ b/src/faq.html
@@ -13,13 +13,15 @@
 
     <link rel="stylesheet" href="./scss/style.scss" />
 
-    <script src="ts/header.ts" defer type="module"></script>
     <script src="ts/faq.ts" defer type="module"></script>
     <link
       href="https://fonts.googleapis.com/css?family=DM Sans"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/131d4698ad.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/131d4698ad.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
