--- a/src/shop.html
+++ b/src/shop.html
@@ -13,14 +13,14 @@
 
     <link rel="stylesheet" href="./scss/style.scss" />
 <script src="./ts/shop.ts" defer type="module"></script>
-    <script src="./ts/header.ts" defer type="module"></script>
+
     <link
       href="https://fonts.googleapis.com/css?family=DM Sans"
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/131d4698ad.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <nav class="header__nav" id="header__nav">
         <div class="header__burger" id="burger">
@@ -54,7 +54,7 @@
     <dialog id="modal" class="modal">
           
     </dialog>
-    <main class="main">
+    <main class="main" id="main">
         <div class="main__menu" id="menu">
 
         
