--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
         <p class="hero__text">
           Torr, känslig eller oljig hy? Vi har produkter för alla hudtyper.
         </p>
-        <button class="hero__button">Köp nu</button>
+        <button class="hero__button" id="indexbutton">Köp nu</button>
       </div>
     </main>
   </body>
