--- a/src/contact.html
+++ b/src/contact.html
@@ -44,7 +44,7 @@
             ><img src="./assets/logo-no-background.svg" alt="logo"
           /></a>
         </div>
-        <div class="header__shopcart">
+        <div class="header__shopcart" id="header__shopcart">
           <i id="cart" class="fa fa-shopping-cart" style="font-size: 30px"></i>
         </div>
 
