--- a/src/faq.html
+++ b/src/faq.html
@@ -40,9 +40,9 @@
         </ul>
 
         <div class="header__logo">
-          <img src="./assets/logo-no-background.svg" alt="logo" />
+          <a href="./index.html"><img src="./assets/logo-no-background.svg" alt="logo" /></a>
         </div>
-        <div class="header__shopcart">
+        <div class="header__shopcart" id="header__shopcart">
           <i id="cart" class="fa fa-shopping-cart" style="font-size: 30px"></i>
         </div>
 
