--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         <div class="header__logo">
           <img src="./assets/logo-no-background.svg" alt="logo" />
         </div>
-        <div class="header__shopcart">
+        <div class="header__shopcart" id="header__shopcart">
           <i id="cart" class="fa fa-shopping-cart" style="font-size: 30px"></i>
         </div>
 
