added z index and fixed pictures

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="./scss/style.scss" />
 
     <script src="ts/main.ts" defer type="module"></script>
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css?family=DM Sans"
       rel="stylesheet"
-    />
+    /> -->
     <script
       src="https://kit.fontawesome.com/131d4698ad.js"
       crossorigin="anonymous"
