--- a/src/shop.html
+++ b/src/shop.html
@@ -51,9 +51,9 @@
         </div>
       </nav>
     </header>
-    <dialog id="modal" class="modal">
+    <div id="modal" class="modal">
           
-    </dialog>
+    </div>
     <main class="main" id="main">
         <div class="main__menu" id="menu">
 
