Styling input field

--- a/src/contact.html
+++ b/src/contact.html
@@ -70,7 +70,7 @@
           placeholder="E-postadress"
           class="form__email"
         />
-        <input type="text" class="form__message" />
+        <textarea type="text" class="form__message"></textarea>
         <button class="form__submitbutton" id="submitbutton">Skicka</button>
       </form>
     </main>
