Fixed modal, menus and started checkoutfunction

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -60,7 +60,7 @@
       <div class="checkout__formcontainer" id="formcontainer">
 
           <div class="checkout__container">
-        <form action="">
+        <form action="" id="form">
 
      
               <div class="checkout__container__column">
