--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
     <header class="header">
       <nav class="header__nav">
         <div class="header__burger" id="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
         <ul class="header__list" id="nav">
           <li class="header__navitem">
