styling and checkout

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -56,7 +56,7 @@
         </div>
       </nav>
     </header>
-    <main class="checkout">
+    <div class="checkout" id="main__checkout"">
       <div class="checkout__formcontainer" id="formcontainer">
 
           <div class="checkout__container">
@@ -173,6 +173,6 @@
           Visa varukorgen <i class="fa fa-chevron-down"></i>
         </h4>
       </div>
-    </main>
+    </div>
   </body>
 </html>
