--- a/src/contact.html
+++ b/src/contact.html
@@ -35,7 +35,9 @@
           <li class="header__navitem">
             <a href="./shop.html">Shop</a>
           </li>
-          <li class="header__navitem"><a href="./contact.html">Kontakt</a></li>
+          <li class="header__navitemactive">
+            <a href="./contact.html">Kontakt</a>
+          </li>
           <li class="header__navitem"><a href="./faq.html">FAQ</a></li>
         </ul>
 
