--- a/src/faq.html
+++ b/src/faq.html
@@ -36,11 +36,13 @@
             <a href="./shop.html">Shop</a>
           </li>
           <li class="header__navitem"><a href="./contact.html">Kontakt</a></li>
-          <li class="header__navitem"><a href="./faq.html">FAQ</a></li>
+          <li class="header__navitemactive"><a href="./faq.html">FAQ</a></li>
         </ul>
 
         <div class="header__logo">
-          <a href="./index.html"><img src="./assets/logo-no-background.svg" alt="logo" /></a>
+          <a href="./index.html"
+            ><img src="./assets/logo-no-background.svg" alt="logo"
+          /></a>
         </div>
         <div class="header__shopcart" id="header__shopcart">
           <i id="cart" class="fa fa-shopping-cart" style="font-size: 30px"></i>
