--- a/src/shop.html
+++ b/src/shop.html
@@ -29,7 +29,7 @@
           <div class="line3"></div>
         </div>
         <ul class="header__list" id="nav">
-          <li class="header__navitem"><a href="./shop.html">Shop</a></li>
+          <li class="header__navitemactive"><a href="./shop.html">Shop</a></li>
           <li class="header__navitem"><a href="./contact.html">Kontakt</a></li>
           <li class="header__navitem"><a href="./faq.html">FAQ</a></li>
         </ul>
