Added more styling

--- a/src/index.html
+++ b/src/index.html
@@ -120,8 +120,9 @@
      </ul>
      <ul class="social">
         <li class="social__icon"><i class="fa-brands fa-instagram"></i></li>
-        <li class="social__icon"><i class="fa-brands fa-twitter"></i></li>
+        <li class="social__icon"><i class="fa-brands fa-linkedin"></i></li>
         <li class="social__icon"><i class="fa-brands fa-facebook"></i></li>
+        <li class="social__icon"><i class="fa-brands fa-pinterest"></i></li>
      </ul>
     </div>
     </footer>
