--- a/src/checkout.html
+++ b/src/checkout.html
@@ -55,5 +55,24 @@
         <div class="checkout__formcontainer"></div>
         <div class="checkout__cartcontainer"></div>
     </main>
+    <footer>
+      <div class="logo"></div>
+      <div class="contacts">
+      <ul class="contacts__list">
+        <li class="contacts__list__item">Gustavslundsvägen 151D</li>
+        <li class="contacts__list__item">167 51, Bromma</li>
+     </ul>
+     <ul class="contacts__list">
+        <li class="contacts__list__item">info@hudshoppen.se</li>
+        <li class="contacts__list__item">08–442 95 00</li>
+     </ul>
+     <ul class="social">
+        <li class="social__icon"><i class="fa-brands fa-instagram"></i></li>
+        <li class="social__icon"><i class="fa-brands fa-linkedin"></i></li>
+        <li class="social__icon"><i class="fa-brands fa-facebook"></i></li>
+        <li class="social__icon"><i class="fa-brands fa-pinterest"></i></li>
+     </ul>
+    </div>
+    </footer>
     </body>
     </html>
