--- a/src/contact.html
+++ b/src/contact.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Kontakt</title>
 
     <link rel="stylesheet" href="./scss/style.scss" />
     <script src="./ts/contact.ts" defer type="module"></script>
@@ -76,5 +76,24 @@
         <button class="form__submitbutton" id="submitbutton">Skicka</button>
       </form>
     </main>
+    <footer>
+      <div class="logo"></div>
+      <div class="contacts">
+      <ul class="contacts__list">
+        <li class="contacts__list__item">Gustavslundsvägen 151D</li>
+        <li class="contacts__list__item">167 51, Bromma</li>
+     </ul>
+     <ul class="contacts__list">
+        <li class="contacts__list__item">info@hudshoppen.se</li>
+        <li class="contacts__list__item">08–442 95 00</li>
+     </ul>
+     <ul class="social">
+        <li class="social__icon"><i class="fa-brands fa-instagram"></i></li>
+        <li class="social__icon"><i class="fa-brands fa-linkedin"></i></li>
+        <li class="social__icon"><i class="fa-brands fa-facebook"></i></li>
+        <li class="social__icon"><i class="fa-brands fa-pinterest"></i></li>
+     </ul>
+    </div>
+    </footer>
   </body>
 </html>
